@@ -7,5 +7,6 @@ quelea (2015.3) stable; urgency=normal
   * Add songpro importer
   * Fix search behaviour to ignore non-alphanumeric characters in index and search string
   * Fix long search time when searching for a non-indexed (non-alphanumeric) character
+  * Songs matching search in titles now appear before other results
 
  -- Michael Berry <michael@quelea.org>  Wednesday, 26 April 2015 00:00:00 +0000
